<resources>
    <string name="app_name">InmoniliariaLuceroMoviles</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_inmueble">Inmueble</string>
    <string name="menu_inquilino">Inquilino</string>
    <string name="menu_contrato">Contrato</string>
    <string name="menu_logout">Logout</string>

    <string name="et_mail">Emal</string>
    <string name="et_password">Contraseña</string>
    <string name="bt_ingresar">Ingresar</string>
    <string name="tv_error">Error</string>

    <string name="et_id">ID</string>
    <string name="tv_id">ID</string>
    <string name="et_nombre">Nombre</string>
    <string name="et_apellido">Apellido</string>
    <string name="et_dni">Dni</string>
    <string name="et_telefono">Telefono</string>
    <string name="bt_guardar">Guardar</string>
    <string name="bt_editar">Editar</string>

    <string name="et_precio">Precio</string>
    <string name="et_direccion">Direccion</string>

    <string name="inmu_detalle_fragment">Detalle inmueble</string>
    <string name="inqui_detalle_fragment">Detalle inquilino</string>
    <string name="con_detalle_fragment">Detalle contrato</string>
    <string name="pago_fragment">Pagos</string>


</resources>