<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.example.inmoniliarialuceromoviles.ui.inicio.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.inmoniliarialuceromoviles.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_inmueble"
        android:name="com.example.inmoniliarialuceromoviles.ui.inmueble.InmuebleFragment"
        android:label="@string/menu_inmueble"
        tools:layout="@layout/fragment_inmueble" />

    <fragment
        android:id="@+id/nav_inquilino"
        android:name="com.example.inmoniliarialuceromoviles.ui.inicio.InicioFragment"
        android:label="@string/menu_inquilino"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_contrato"
        android:name="com.example.inmoniliarialuceromoviles.ui.perfil.PerfilFragment"
        android:label="@string/menu_contrato"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.inmoniliarialuceromoviles.ui.inmueble.InmuebleFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_inmueble" />

</navigation>