<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.perfil.PerfilFragment">

    <ImageView
        android:id="@+id/ivFotoP"
        android:layout_width="106dp"
        android:layout_height="95dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="182dp"
        android:layout_height="48dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="121dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/et_nombre"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivFotoP" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="183dp"
        android:layout_height="48dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/et_apellido"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <EditText
        android:id="@+id/etDocument"
        android:layout_width="182dp"
        android:layout_height="0dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/et_dni"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLastName" />

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="183dp"
        android:layout_height="48dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="41dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/et_mail"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPhone" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="181dp"
        android:layout_height="48dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/et_telefono"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDocument" />

    <Button
        android:id="@+id/btEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="96dp"
        android:background="#AC51BC"
        android:hint="@string/bt_editar"
        android:text="Editar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCorreo" />

    <Button
        android:id="@+id/btGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="96dp"
        android:background="#B451C5"
        android:hint="@string/bt_guardar"
        android:text="Guardar"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCorreo" />

    <TextView
        android:id="@+id/tvId"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="59dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>


