<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="257dp"
        android:layout_height="204dp"
        android:layout_marginStart="142dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="141dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="230dp"
        android:layout_height="64dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="@string/et_mail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="225dp"
        android:layout_height="66dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="@string/et_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="159dp"
        android:hint="@string/bt_ingresar"
        android:text="@string/bt_ingresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="177dp"
        android:hint="@string/tv_error"
        android:text="DATOS INCORRECTOS"
        android:textAlignment="center"
        android:textColor="#E80D0D"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btIngresar" />
</androidx.constraintlayout.widget.ConstraintLayout>